tests/testdata/check/exclude_option/exclude_option.ts.error.out
error: TS2304 [ERROR]: Cannot find name 'nothing'.
export { nothing };
         ~~~~~~~
    at [WILDCARD]
